--- a/index.html
+++ b/index.html
@@ -212,10 +212,10 @@
           <div class="hero-secondary__img">
             <img class="hero-secondary__image" src="sun.jpg" alt="Space plasma illustration">
           </div>
-          <div class="hero-secondary__copy">
+          <div class="hero-secondary__copy" style="height: 531.883px;">
             <h1 class="hero-secondary__heading th-s1 th-o text-white">Space plasma insights could help protect us from the harms of space weather</h1>
             <div class="text-white th-s4"></div>
-            <a href="https://www.qmul.ac.uk/" class="action action--secondary hero-secondary__cta">
+            <a href="https://www.qmul.ac.uk/" class="action action--secondary hero-secondary__cta" style="transform: translateY(-36px);">
               <span class="twi action__label">
                 <span class="twi__label"><span>CTA Button</span></span>
               </span>
